le cambie el nombre de las clases

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="header">
-<nav class="nav_bar" id="nav__bar" style="top: -80px">
+<nav class="nav_bar" id="nav__bar">
   
   <div class="nav_bar--logo">
     <label for="menu-toggle" class="nav_bar--menu--checkbox"><i class="fa-solid fa-bars" style="color: #fff;"></i></label>
@@ -17,23 +17,23 @@
   </div>
   <input type="checkbox" name="" id="menu-toggle" class="nav_bar--menu--checkbox">
   <ul class="nav_bar--categorias" id="hidden-menu">
-  <li class="li"><i class="fa-solid fa-tag rosa"></i><a href="#" class="nav_bar--categorias--links" >Lo más reciente</a></li>
-  <li class="li"><i class="fa-solid fa-tag rosa"></i><a href="#" class="nav_bar--categorias--links" ></i>Entorno</a></li>
-  <li class="li"><i class="fa-solid fa-tag rosa"></i><a href="#" class="nav_bar--categorias--links" ></i>Belleza</a></li>
-  <li class="li"><i class="fa-solid fa-tag rosa"></i><a href="#" class="nav_bar--categorias--links" ></i>Moda</a></li>
-  <li class="li"><i class="fa-solid fa-tag rosa"></i><a href="#" class="nav_bar--categorias--links" ></i>Novias</a></li>
-  <li class="li"><i class="fa-solid fa-tag rosa"></i><a href="#" class="nav_bar--categorias--links" ></i>Celebridades</a></li>
-  <li class="li"><i class="fa-solid fa-tag rosa"></i><a href="#" class="nav_bar--categorias--links" ></i>Amor propio</a></li>
-  <li class="li"><i class="fa-solid fa-tag rosa"></i><a href="#" class="nav_bar--categorias--links" ></i>Must</a></li>
-  <li class="li"><i class="fa-solid fa-tag rosa"></i><a href="#" class="nav_bar--categorias--links" ></i>Hogar</a></li>
-  <li class="li"><i class="fa-solid fa-tag rosa"></i><a href="#" class="nav_bar--categorias--links" ></i>Juegos</a></li>
+  <li class="nav_bar--categorias--li"><i class="fa-solid fa-tag rosa"></i><a href="#" class="nav_bar--categorias--links" >Lo más reciente</a></li>
+  <li class="nav_bar--categorias--li"><i class="fa-solid fa-tag rosa"></i><a href="#" class="nav_bar--categorias--links" ></i>Entorno</a></li>
+  <li class="nav_bar--categorias--li"><i class="fa-solid fa-tag rosa"></i><a href="#" class="nav_bar--categorias--links" ></i>Belleza</a></li>
+  <li class="nav_bar--categorias--li"><i class="fa-solid fa-tag rosa"></i><a href="#" class="nav_bar--categorias--links" ></i>Moda</a></li>
+  <li class="nav_bar--categorias--li"><i class="fa-solid fa-tag rosa"></i><a href="#" class="nav_bar--categorias--links" ></i>Novias</a></li>
+  <li class="nav_bar--categorias--li"><i class="fa-solid fa-tag rosa"></i><a href="#" class="nav_bar--categorias--links" ></i>Celebridades</a></li>
+  <li class="nav_bar--categorias--li"><i class="fa-solid fa-tag rosa"></i><a href="#" class="nav_bar--categorias--links" ></i>Amor propio</a></li>
+  <li class="nav_bar--categorias--li"><i class="fa-solid fa-tag rosa"></i><a href="#" class="nav_bar--categorias--links" ></i>Must</a></li>
+  <li class="nav_bar--categorias--li"><i class="fa-solid fa-tag rosa"></i><a href="#" class="nav_bar--categorias--links" ></i>Hogar</a></li>
+  <li class="nav_bar--categorias--li"><i class="fa-solid fa-tag rosa"></i><a href="#" class="nav_bar--categorias--links" ></i>Juegos</a></li>
   
    <ul class="nav_bar--redes">
     <li class="redes-text">Nuestras redes sociales</li>
-    <li class="item"><a href="#" class="nav_bar--redes--links"><i class="fa-brands fa-twitter"></i></a></li>
-    <li class="item"><a href="#" class="nav_bar--redes--links"><i class="fa-brands fa-facebook-f"></i></a></li>
-    <li class="item"><a href="#" class="nav_bar--redes--links"><i class="fa-brands fa-instagram"></i></a></li>
-    <li class="item"><a href="#" class="nav_bar--redes--links"><i class="fa-brands fa-youtube"></i></a></li>
+    <li class="nav_bar--redes--item"><a href="#" class="nav_bar--redes--links"><i class="fa-brands fa-twitter"></i></a></li>
+    <li class="nav_bar--redes--item"><a href="#" class="nav_bar--redes--links"><i class="fa-brands fa-facebook-f"></i></a></li>
+    <li class="nav_bar--redes--item"><a href="#" class="nav_bar--redes--links"><i class="fa-brands fa-instagram"></i></a></li>
+    <li class="nav_bar--redes--item"><a href="#" class="nav_bar--redes--links"><i class="fa-brands fa-youtube"></i></a></li>
    </ul>  
 </ul>
 </nav>
