--- a/index.html
+++ b/index.html
@@ -38,5 +38,114 @@
 </ul>
 </nav>
   </header>
+  <section class="principal" style="display:flex; flex-direction: column; align-items: center;">
+    <h1>SECCIÓN PRINCIPAL</h1> 
+    <article class="main" style="display:flex; flex-wrap:wrap; justify-content:center;">
+<figure style="background-color:pink; display:flex; flex-direction: column; align-items: center; max-width: 300px;  min-width: 50px;">
+    <img src="/img/proteccionsolarpostcuarentena.webp" alt="imagen nota" style="width: 100%;display:block;">
+    <h3 style="border-bottom: 5px solid #88b2ff;margin-top:2rem;"> CATEGORIA </h3>
+    <h2 style="text-align:center;margin-top:-0.5rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, sint eveniet unde vel impedit excepturi minima. </h2>     
+</figure>
+<figure style="background-color:pink; display:flex; flex-direction: column; align-items: center; max-width: 300px;  min-width: 50px;">
+    <img src="/img/proteccionsolarpostcuarentena.webp" alt="imagen nota" style="width: 100%;display:block;">
+    <h3 style="border-bottom: 5px solid #88b2ff;margin-top:2rem;"> CATEGORIA </h3>
+    <h2 style="text-align:center;margin-top:-0.5rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, sint eveniet unde vel impedit excepturi minima. </h2>     
+</figure>
+<figure style="background-color:pink; display:flex; flex-direction: column; align-items: center; max-width: 300px;  min-width: 50px;">
+    <img src="/img/proteccionsolarpostcuarentena.webp" alt="imagen nota" style="width: 100%;display:block;">
+    <h3 style="border-bottom: 5px solid #88b2ff;margin-top:2rem;"> CATEGORIA </h3>
+    <h2 style="text-align:center;margin-top:-0.5rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, sint eveniet unde vel impedit excepturi minima. </h2>     
+</figure>
+<figure style="background-color:pink; display:flex; flex-direction: column; align-items: center; max-width: 300px;  min-width: 50px;">
+    <img src="/img/proteccionsolarpostcuarentena.webp" alt="imagen nota" style="width: 100%;display:block;">
+    <h3 style="border-bottom: 5px solid #89b2ff;margin-top:2rem;"> CATEGORIA </h3>
+    <h2 style="text-align:center;margin-top:-0.5rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, sint eveniet unde vel impedit excepturi minima. </h2>     
+</figure>
+</article>
+<article class="mainArticle"style="display:flex;justify-content:center;">
+    <figure style="background-color:pink; display:flex; flex-direction: column; align-items: center; max-width: 800px;">
+    <img src="/img/proteccionsolarpostcuarentena.webp" alt="imagen nota" style="width: 100%;display:block;">
+    <h3 style="border-bottom: 5px solid #89b2ff;margin-top:2rem;"> CATEGORIA </h3>
+    <h2 style="text-align:center;margin-top:-0.5rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, sint eveniet unde vel impedit excepturi minima. </h2>     
+    </article>
+
+<article class="moreviews" style="display:flex; flex-wrap:wrap; justify-content:center;">
+<figure style="background-color:pink; display:flex; flex-direction: column; align-items: center; max-width: 600px;">
+    <img src="/img/proteccionsolarpostcuarentena.webp" alt="imagen nota" style="width: 100%;display:block;">
+    <h3 style="border-bottom: 5px solid #88b2ff;margin-top:2rem;"> CATEGORIA </h3>
+    <h2 style="text-align:center;margin-top:-0.5rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, sint eveniet unde vel impedit excepturi minima. </h2>     
+</figure>
+<figure style="background-color:pink; display:flex; flex-direction: column; align-items: center; max-width: 600px;  ">
+    <img src="/img/proteccionsolarpostcuarentena.webp" alt="imagen nota" style="width: 100%;display:block;">
+    <h3 style="border-bottom: 5px solid #88b2ff;margin-top:2rem;"> CATEGORIA </h3>
+    <h2 style="text-align:center;margin-top:-0.5rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, sint eveniet unde vel impedit excepturi minima. </h2>     
+</figure>
+<figure style="background-color:pink; display:flex; flex-direction: column; align-items: center; max-width: 600px; ">
+    <img src="/img/proteccionsolarpostcuarentena.webp" alt="imagen nota" style="width: 100%;display:block;">
+    <h3 style="border-bottom: 5px solid #88b2ff;margin-top:2rem;"> CATEGORIA </h3>
+    <h2 style="text-align:center;margin-top:-0.5rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, sint eveniet unde vel impedit excepturi minima. </h2>     
+</figure>
+<figure style="background-color:pink; display:flex; flex-direction: column; align-items: center; max-width: 600px;  ">
+    <img src="/img/proteccionsolarpostcuarentena.webp" alt="imagen nota" style="width: 100%;display:block;">
+    <h3 style="border-bottom: 5px solid #89b2ff;margin-top:2rem;"> CATEGORIA </h3>
+    <h2 style="text-align:center;margin-top:-0.5rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, sint eveniet unde vel impedit excepturi minima. </h2>     
+</figure>
+<figure style="background-color:pink; display:flex; flex-direction: column; align-items: center; max-width: 600px;  ">
+    <img src="/img/proteccionsolarpostcuarentena.webp" alt="imagen nota" style="width: 100%;display:block;">
+    <h3 style="border-bottom: 5px solid #89b2ff;margin-top:2rem;"> CATEGORIA </h3>
+    <h2 style="text-align:center;margin-top:-0.5rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, sint eveniet unde vel impedit excepturi minima. </h2>     
+</figure><figure style="background-color:pink; display:flex; flex-direction: column; align-items: center; max-width: 600px;  ">
+    <img src="/img/proteccionsolarpostcuarentena.webp"alt="imagen nota" style="width: 100%;display:block;">
+    <h3 style="border-bottom: 5px solid #89b2ff;margin-top:2rem;"> CATEGORIA </h3>
+    <h2 style="text-align:center;margin-top:-0.5rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, sint eveniet unde vel impedit excepturi minima. </h2>     
+</figure>
+</article>
+
+</section>
+
+<section class="videos" style="display:flex; flex-direction: column; align-items: center;">
+<h1>VIDEOS</h1>
+<article class="mainVideo"style="display:flex;justify-content:center;">
+<figure style="background-color:pink; display:flex; flex-direction: column; align-items: center; max-width: 800px;">
+<img src="/img/proteccionsolarpostcuarentena.webp" alt="imagen nota" style="width: 100%;display:block;">
+<h3 style="border-bottom: 5px solid #89b2ff;margin-top:2rem;"> CATEGORIA </h3>
+<h2 style="text-align:center;margin-top:-0.5rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, sint eveniet unde vel impedit excepturi minima. </h2>     
+</article>
+
+</section>
+<footer style="background-color: black;color: white;display:flex; ">
+<figure style="justify-content: center;" >
+    <img src="" alt="logo imagen" style="flex-grow: 2;">
+    <img src="" alt="logo actitud"style="flex-grow: 2;">
+</figure>
+<ul style="list-style: none; display: flex;">
+    <li style="flex-grow: 3;">Términos y condiciones de uso</li>
+    <li style="flex-grow: 3;">Aviso de privacidad</li>
+    <li style="flex-grow: 3;">Política Ambiental</li>
+</ul>
+<ul style="list-style: none;  display:flex; flex-flow:row-wrap; ">
+    <li style="flex-grow: 5;"><a href="">Entorno</a></li>
+    <li style="flex-grow: 5;"><a href="">Belleza</a></li>
+    <li style="flex-grow: 5;" ><a href="">Moda</a></li>
+    <li style="flex-grow: 5;"><a href="">Novias</a></li>
+    <li style="flex-grow: 5;"><a href="">Celebridades</a></li>
+    <li style="flex-grow: 5;"><a href="">Amor Propio</a></li>
+    <li style="flex-grow: 5;"><a href="">Must</a></li>
+    <li style="flex-grow: 5;"><a href="">Hogar</a></li>
+    <li style="flex-grow: 5;"><a href="">Juegos</a></li>
+    <li style="flex-grow: 5;"><a href="">Manifiesto</a></li>
+</ul>
+<figure class="slider">
+    <img src="" alt="slider de marcas">
+    <a href="">Slider</a>
+</figure >
+<p class="text-derechos"> © 2023 Imagen Digital. Todos los derechos reservados.Prohibida la reproducción total o parcial, incluyendo cualquier medio electrónico o magnético.
+</p>
+<figure class="logos-empresa">
+    <img src="" alt="empresa1">
+    <img src="" alt="empresa2">
+    <img src="" alt="empresa3">
+</figure>
+</footer>   
 </body>
 </html>
