--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://kit.fontawesome.com/3992c15c73.js" crossorigin="anonymous"></script>
-  <title>MENU CSS</title>
+  <title>Actitud fem</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/3b8c089698.js" crossorigin="anonymous"></script>
 </head>
@@ -35,7 +35,6 @@
       <li><a href="#" class="menu__nav--links--enlace--redes" id ="menu__nav--links--enlace--redes"><i class="fa-brands fa-youtube"></i></a></li>
     </ul>
   </nav>
-  </header>
   <section class="section--principal">
     <h1>SECCIÓN PRINCIPAL</h1> 
     <article class="articles--section--principal">
