menu desplegable con css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Actitud fem</title>
+  <title>imagen</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/3b8c089698.js" crossorigin="anonymous"></script>
 </head>
@@ -12,28 +12,31 @@
 <body>
   <header class="header">
   <nav class="menu__nav">
-    <img src="/img/logoactitudfemnegro.jpeg" class="menu__nav--img" alt="logo actitud fem">
     <input type="checkbox" id="menu__nav--check">
+    
     <label for="menu__nav--check" class="menu__nav--label">
       <img src="/img/menu-blanco.jpeg" class="menu__nav--menu" alt="menu">
     </label>
+    <div class="menu__nav-img">
+    <img src="/img/logoactitudfemnegro.jpeg" class="menu__nav--img" alt="logo actitud fem">
+  </div>
     <ul class="menu__nav--nav_links">
-      <li><a href="#" class="menu__nav--links--enlace"><i class="fa-solid fa-tags rosa"></i> Entorno</a></li>
-      <li><a href="#" class="menu__nav--links--enlace"><i class="fa-solid fa-tags rosa"></i> Belleza</a></li>
-      <li><a href="#" class="menu__nav--links--enlace"><i class="fa-solid fa-tags rosa"></i> Moda</a></li>
-      <li><a href="#" class="menu__nav--links--enlace"><i class="fa-solid fa-tags rosa"></i> Novias</a></li>
-      <li><a href="#" class="menu__nav--links--enlace"><i class="fa-solid fa-tags rosa"></i> Celebridades</a></li>
-      <li><a href="#" class="menu__nav--links--enlace"><i class="fa-solid fa-tags rosa"></i> Amor Propio</a></li>
-      <li><a href="#" class="menu__nav--links--enlace"><i class="fa-solid fa-tags rosa"></i> Must</a></li>
-      <li><a href="#" class="menu__nav--links--enlace"><i class="fa-solid fa-tags rosa"></i> Hogar</a></li>
-      <li><a href="#" class="menu__nav--links--enlace"><i class="fa-solid fa-tags rosa"></i> Juegos</a></li>
-      <li><a href="#" class="menu__nav--links--enlace--suscripcion"><i class="fa-solid fa-arrow-right rosa"></i></i> Nosotros</a></li>
-      <li><a href="#" class="menu__nav--links--enlace--suscripcion"><i class="fa-solid fa-arrow-right rosa"></i></i> Suscribete</a></li>
-      <li><a href="#" class="menu__nav--links--enlace--redes" id ="menu__nav--links--enlace--redes"><i class="fa-brands fa-facebook-f"></i> </a></li>
-      <li><a href="#" class="menu__nav--links--enlace--redes" id ="menu__nav--links--enlace--redes"><i class="fa-brands fa-instagram"></i></i> </a></li>
-      <li><a href="#" class="menu__nav--links--enlace--redes" id ="menu__nav--links--enlace--redes"><i class="fa-brands fa-twitter"></i> </a></li>
-      <li><a href="#" class="menu__nav--links--enlace--redes" id ="menu__nav--links--enlace--redes"><i class="fa-brands fa-youtube"></i></a></li>
-    </ul>
+      <li><a href="#" class="menu__nav--links--enlace"> Entorno</a></li>
+      <li><a href="#" class="menu__nav--links--enlace"> Belleza</a></li>
+      <li><a href="#" class="menu__nav--links--enlace"> Moda</a></li>
+      <li><a href="#" class="menu__nav--links--enlace"> Novias</a></li>
+      <li><a href="#" class="menu__nav--links--enlace"> Celebridades</a></li>
+      <li><a href="#" class="menu__nav--links--enlace"> Amor Propio</a></li>
+      <li><a href="#" class="menu__nav--links--enlace"> Must</a></li>
+      <li><a href="#" class="menu__nav--links--enlace"> Hogar</a></li>
+      <li><a href="#" class="menu__nav--links--enlace"> Juegos</a></li>
+      <section class="links__redes" mensaje="SÍGUENOS EN NUESTRAS REDES:">
+        <li><a href="#" class="menu__nav--links--enlace--redes" id ="menu__nav--links--enlace--redes"><i class="fa-brands fa-facebook-f"></i> </a></li>
+        <li><a href="#" class="menu__nav--links--enlace--redes" id ="menu__nav--links--enlace--redes"><i class="fa-brands fa-instagram"></i></i> </a></li>
+        <li><a href="#" class="menu__nav--links--enlace--redes" id ="menu__nav--links--enlace--redes"><i class="fa-brands fa-twitter"></i> </a></li>
+        <li><a href="#" class="menu__nav--links--enlace--redes" id ="menu__nav--links--enlace--redes"><i class="fa-brands fa-youtube"></i></a></li>
+      </section>
+      </ul>
   </nav>
   <section class="section--principal">
     <h1>SECCIÓN PRINCIPAL</h1> 
