--- a/mobilefirst/mobilefirst.html
+++ b/mobilefirst/mobilefirst.html
@@ -8,6 +8,35 @@
     <script src="https://kit.fontawesome.com/3992c15c73.js" crossorigin="anonymous"></script>
 </head>
 <body>
+      <header class="header">
+  <nav class="menu__nav">
+    <input type="checkbox" id="menu__nav--check">
+    
+    <label for="menu__nav--check" class="menu__nav--label">
+      <img src="/img/menu-blanco.jpeg" class="menu__nav--menu" alt="menu">
+    </label>
+    <div class="menu__nav-img">
+    <img src="/img/logoactitudfemnegro.jpeg" class="menu__nav--img" alt="logo actitud fem">
+  </div>
+    <ul class="menu__nav--nav_links">
+      <li><a href="#" class="menu__nav--links--enlace"> Entorno</a></li>
+      <li><a href="#" class="menu__nav--links--enlace"> Belleza</a></li>
+      <li><a href="#" class="menu__nav--links--enlace"> Moda</a></li>
+      <li><a href="#" class="menu__nav--links--enlace"> Novias</a></li>
+      <li><a href="#" class="menu__nav--links--enlace"> Celebridades</a></li>
+      <li><a href="#" class="menu__nav--links--enlace"> Amor Propio</a></li>
+      <li><a href="#" class="menu__nav--links--enlace"> Must</a></li>
+      <li><a href="#" class="menu__nav--links--enlace"> Hogar</a></li>
+      <li><a href="#" class="menu__nav--links--enlace"> Juegos</a></li>
+      <section class="links__redes" mensaje="SÍGUENOS EN NUESTRAS REDES:">
+        <li><a href="#" class="menu__nav--links--enlace--redes" id ="menu__nav--links--enlace--redes"><i class="fa-brands fa-facebook-f"></i> </a></li>
+        <li><a href="#" class="menu__nav--links--enlace--redes" id ="menu__nav--links--enlace--redes"><i class="fa-brands fa-instagram"></i></i> </a></li>
+        <li><a href="#" class="menu__nav--links--enlace--redes" id ="menu__nav--links--enlace--redes"><i class="fa-brands fa-twitter"></i> </a></li>
+        <li><a href="#" class="menu__nav--links--enlace--redes" id ="menu__nav--links--enlace--redes"><i class="fa-brands fa-youtube"></i></a></li>
+      </section>
+      </ul>
+  </nav>
+    </header>
     <main>
         <section class="seccion__principal">
             <article class="articulo__principal">
