--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
   <title>imagen</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/3b8c089698.js" crossorigin="anonymous"></script>
+    <script src="main.js"></script>
 </head>
 
 <body>
   <header class="header">
-  <nav class="menu__nav">
+  <nav class="menu__nav" id="navbar">
     <input type="checkbox" id="menu__nav--check">
     
     <label for="menu__nav--check" class="menu__nav--label">
