--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <figure class="article--card--video principal">
                     <img class="card--img--principal" src="/img/nodal-en-san-luis-potosi.jpg" alt="imagen note">
                     <i class="fa-solid fa-play"></i>
-                    <div class="texto--category--video">
+                    <div class="text--category--video">
 
                         <h3 class="title--card--category"> category </h3>
 
@@ -188,11 +188,11 @@
             </figure>
 
             <figure>
-                <img class="logos-empresa" src="./img/hcYellow.png" alt="empresa1">
-                <img class="logos-empresa" src="./img/life.png" alt="empresa2">
-                <img class="logos-empresa" src="./img/esrlogo.jpeg" alt="empresa3">
+                <img class="company-logo" src="./img/hcYellow.png" alt="empresa1">
+                <img class="company-logo" src="./img/life.png" alt="empresa2">
+                <img class="company-logo" src="./img/esrlogo.jpeg" alt="empresa3">
             </figure>
-            <p class="text-derechos"> © 2023 Imagen Digital. Todos los derechos reservados.Prohibida la reproducción
+            <p class="text-rights"> © 2023 Imagen Digital. Todos los derechos reservados.Prohibida la reproducción
                 total o parcial, incluyendo cualquier medio electrónico o magnético.
             </p>
         </footer>
