--- a/mobileActitud.html
+++ b/mobileActitud.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <style> @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,700;1,400;1,500;1,900&display=swap');</style>
     <title>Actitudfem</title>
     <link
 rel="stylesheet"
