--- a/mobileActitud.html
+++ b/mobileActitud.html
@@ -19,7 +19,7 @@ media="only screen and (min-width: 768px)"
 
 <link
 rel="stylesheet"
-href="/tablet.css"
+href="/desktop.css"
 media="only screen and (min-width: 1024px)"
 />
 
